// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getLocalIdent option should accepts arguments: errors 1`] = `Array []`;

exports[`getLocalIdent option should accepts arguments: locals 1`] = `
Object {
  "abc": "foo",
  "def": "foo",
  "ghi": "foo",
  "jkl": "foo",
}
`;

exports[`getLocalIdent option should accepts arguments: module (evaluated) 1`] = `
Array [
  Array [
    1,
    ".foo .foo {
  color: red;
}

.foo .foo {
  color: blue;
}
",
    "",
  ],
]
`;

exports[`getLocalIdent option should accepts arguments: warnings 1`] = `Array []`;

exports[`getLocalIdent option should respect \`context\` option: errors 1`] = `Array []`;

exports[`getLocalIdent option should respect \`context\` option: locals 1`] = `
Object {
  "abc": "_1hksQTRR0UD9eKPUBlgn0X",
  "def": "_3oo37UGTAgyDe0MeQom-28",
  "ghi": "_2ZRWT_7WiIKpOei7U0eJzJ",
  "jkl": "aQ1rQfhbWSRMXFXxIfQcx",
}
`;

exports[`getLocalIdent option should respect \`context\` option: module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._1hksQTRR0UD9eKPUBlgn0X ._3oo37UGTAgyDe0MeQom-28 {
  color: red;
}

._2ZRWT_7WiIKpOei7U0eJzJ .aQ1rQfhbWSRMXFXxIfQcx {
  color: blue;
}
",
    "",
  ],
]
`;

exports[`getLocalIdent option should respect \`context\` option: warnings 1`] = `Array []`;

exports[`getLocalIdent option should work (\`modules: false\`): errors 1`] = `Array []`;

exports[`getLocalIdent option should work (\`modules: false\`): locals 1`] = `
Object {
  "def": "foo",
  "ghi": "foo",
  "jkl": "foo",
}
`;

exports[`getLocalIdent option should work (\`modules: false\`): module (evaluated) 1`] = `
Array [
  Array [
    1,
    ".abc .foo {
  color: red;
}

.foo .foo {
  color: blue;
}
",
    "",
  ],
]
`;

exports[`getLocalIdent option should work (\`modules: false\`): warnings 1`] = `Array []`;

exports[`getLocalIdent option should work (\`modules: true\`): errors 1`] = `Array []`;

exports[`getLocalIdent option should work (\`modules: true\`): locals 1`] = `
Object {
  "abc": "foo",
  "def": "foo",
  "ghi": "foo",
  "jkl": "foo",
}
`;

exports[`getLocalIdent option should work (\`modules: true\`): module (evaluated) 1`] = `
Array [
  Array [
    1,
    ".foo .foo {
  color: red;
}

.foo .foo {
  color: blue;
}
",
    "",
  ],
]
`;

exports[`getLocalIdent option should work (\`modules: true\`): warnings 1`] = `Array []`;
